--- a/src/main/resources/templates/add_category.html
+++ b/src/main/resources/templates/add_category.html
@@ -256,7 +256,7 @@
                     <hr class="sidebar-divider">
                     <!-- Image Picker Input -->
 
-                    <form action="/admin/add-category" method="post" enctype="multipart/form-data">
+                    <form th:action="@{/admin/addCategory}" th:object="${category}" method="post" enctype="multipart/form-data">
                         <div class="mb-3">
                             <label for="imageUpload" class="form-label">Select an Image:</label>
                             <input class="form-control" type="file" id="imageUpload" accept="image/*">
@@ -265,7 +265,7 @@
                         <!-- Image Preview -->
                         <div id="imagePreview" class="mt-3" style="display: none;">
                             <h5>Selected Image:</h5>
-                            <img id="previewImg" src="#" alt="Selected Image" class="img-fluid rounded"
+                            <img name="previewImg" src="#" alt="Selected Image" class="img-fluid rounded"
                                 style="width: auto; height: 200px;">
                         </div>
                         <div class="mb-3">
